--- a/changelog.txt
+++ b/changelog.txt
@@ -2,9 +2,7 @@
 Version: 0.0.1
 Date: 12.03.2022
 	Features: 
-		- added setting to choose the suiteable size of equipment grid of own choice.
-			The mods defaults can be fount at startup-setting if u have the optional mod present
-		- increased inventory sizes
-			Mk1, Mk2, Mk3, Mk4, & Truster suits
-		- added Norwegian translation
+		- Added setting to choose the suiteable size of equipment grid of own choice.
+		- The mods defaults are higer than the other mod u install. Can be found at ("startup-setting"/startup settings) if u have the optional mod present.
+		- Norwegian translation included.
 	
