--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,7 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.1
 Date: 07.04.2022
-  Features: 
-    - Added setting to choose the suiteable size of equipment grid of own choice.
+  Features:
+    - Added setting to choose the suiteable size of equipment grid of own choice
     - The mods defaults are higer than the other mod u install. Can be found at ("startup-setting"/startup settings) if u have the optional mod present.
     - Norwegian translation included.
