--- a/changelog.txt
+++ b/changelog.txt
@@ -4,5 +4,5 @@ Date: 07.04.2022
   Features:
     - Added setting to choose the suiteable size of equipment grid of own choice
     - The mods defaults are higer than the other mod u install. Can be found at ("startup-setting"/startup settings) if u have the optional mod present.
-    - Added Norwegian translation.
-    - Copatibility: Bob's, Custom Power Armour fix, Power Armour mk3, Rampand Aresensal, Krastorio2, Space Exploration,
+    - Added Norwegian translation. vanilla only. Rest still WIP.
+    - Copatibility: Bob's, Custom Power Armour fix, Power Armour mk3, RampantArsenal, Krastorio2, Space Exploration,
