P&A + Factorio Extended Compatibility

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,17 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.0.3
+Date: xx.05.2022
+  Features:
+    - Power and armour has now settings.
+    - FactorioExtended-Equipment Armours has now settings.
+  Changes:
+    - Setting order for Rampant Aresnal went from F to I
+    - reduced limit of K2's mk4 Armour
+  Fixes:
+    - Reverted the way K2 changes the grid sizes for SE if bothe mods are played toghetter.
+    - Fixed NO localisations in genral
+    - Fixed NO localisations for "bob-power-armor-mk4-grid-size-w"
+---------------------------------------------------------------------------------------------------
 Version: 0.0.2
 Date: 11.05.2022
   Features:
