--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.1
+Date: xx.05.2022
+  Fixes:
+    - Organized info page
+---------------------------------------------------------------------------------------------------
 Version: 0.1.0
 Date: 15.05.2022
   Features:
