--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.1
-Date: xx.05.2022
+Date: 15.05.2022
   Fixes:
     - Organized info page
 ---------------------------------------------------------------------------------------------------
