--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.2.1
+Date: 01.06.2022
+  Fixes:
+    - Homepage Url.
+---------------------------------------------------------------------------------------------------
 Version: 0.2.0
 Date: 30.05.2022
   Features:
