--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,8 @@ Version: 0.2.1
 Date: 01.06.2022
   Fixes:
     - Homepage Url.
+  Thanks:
+    - @jasper#8009 for spotting the bug (Discord)
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.0
 Date: 30.05.2022
