--- a/changelog.txt
+++ b/changelog.txt
@@ -1,10 +1,18 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.2.6
+Date: 06.06.2022
+  Fixes:
+    - Setting order for Power Armour MK3. the entire order was not made properly.
+    - Setting order for Rampant Arsenal.
+  Changes:
+    - Info.json version 0.2.6 Done this to verify my chnaged version.
+---------------------------------------------------------------------------------------------------
 Version: 0.2.5
 Date: 06.06.2022
-  Completion:
+  Completions:
     - The missing number for the "game defaults". Done with (NO, EN, RU)
   Changes:
-    - Default INV values for Power & Armour went from 40, 50 to 60, 70.
+    - Default INV values for Power & Armour went from 40 & 50 to 60 & 70.
     - Description of changelog v0.2.3
     - Space suits Default INV old numbers: T1-30, T2-40, T3-50, T4-60. New size went up.
   Translation:
