--- a/changelog.txt
+++ b/changelog.txt
@@ -2,9 +2,15 @@
 Version: 0.2.7
 Date: 06.06.2022
   Features:
-    - Comptibility with MK10-Armour.
-    - Added setting for MK10-Armour mod.
+    - Comptibility with IR2.-Armour.
+    - Added setting for IR2-Armour mod.
     - Optional Dependencies.
+    - Traces of upcoming mod MK10-Armour is added. Mod does not exstis yet.
+  Compatibility:
+    - IR2. U can now configure grid size if mod is present. Since the mod adds grid to these armours.
+  Changes:
+    - Internal cleanup in datafinalfixes.
+    - Info.json verified verion 0.2.7.
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.6
 Date: 06.06.2022
