--- a/changelog.txt
+++ b/changelog.txt
@@ -3,8 +3,7 @@ Version: 0.2.7
 Date: 06.06.2022
   Features:
     - Comptibility with IR2.-Armour.
-    - Added setting for IR2-Armour mod.
-    - Optional Dependencies.
+    - Added setting for IR2-Armour grids.
     - Traces of upcoming mod MK10-Armour is added. Mod does not exstis yet.
   Compatibility:
     - IR2. U can now configure grid size if mod is present. Since the mod adds grid to these armours.
