--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.2
-Date: xx.01.2023
+Date: 27.12.2022
   Changes:
     - Removed support for IR2.
     - Added support for IR3.
