--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.3.3
+Date: 29.12.2022
+  Changes:
+    - Added...
+---------------------------------------------------------------------------------------------------
 Version: 0.3.2
 Date: 27.12.2022
   Changes:
