--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.3.4
+Date: ????
+  Changes:
+---------------------------------------------------------------------------------------------------
 Version: 0.3.3
 Date: 2023-01-07
   Changes:
