--- a/changelog.txt
+++ b/changelog.txt
@@ -6,7 +6,7 @@ Date: ????
 Version: 0.3.3
 Date: 2023-01-07
   Changes:
-    - Added incompatibility and new Optional mod to the list. Without depedency loop.
+    - Added new Optional mod to the list. Without depedency loop.
     - Universefied all mod default INV bonuses.
   Locals:
     - Removed the Mod Deafault in tooltip locales. Click the setting reset should u want the default.
