--- a/changelog.txt
+++ b/changelog.txt
@@ -1,10 +1,12 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.4
-Date: ????
-  Changes:
+Date: xx.xx.2023
+  Fixes:
+    - Incompatibility listed in wrong changelog. Was meant for Power Armour Replacer mod. WIP but avalible in beta.
+    - Chanagelog wrong mod liting incompatibility.
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.3
-Date: 2023-01-07
+Date: 07.01.2023
   Changes:
     - Added new Optional mod to the list. Without depedency loop.
     - Universefied all mod default INV bonuses.
