--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.4
-Date: xx.01.2023
+Date: 2023-01-15
   Features:
     - Added new setting for armour-replacer mod. Now requires v1.0.0 of mod.
   Fixes:
