moved to version 0.3.5

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.3.5
+Date: ????
+  Changes:
+---------------------------------------------------------------------------------------------------
 Version: 0.3.4
 Date: 2023-01-15
   Features:
